packages/dart_edge_s3_client/lib/src/native/generated_bindings.dart

// ignore_for_file: camel_case_types, non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:dart_edge_s3_client/dart_edge_s3_client.dart')
library;

import 'dart:ffi' as ffi;
import 'package:dart_edge_core/ffi.dart' as imp$1;

@ffi.Native<ffi.Int64 Function(ffi.Pointer<ffi.Char>)>()
external int dart_edge_s3_client_create(ffi.Pointer<ffi.Char> config_json);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Int64, ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<ffi.Char> dart_edge_s3_client_delete_object(
  int handle,
  ffi.Pointer<ffi.Char> request_json,
);

@ffi.Native<ffi.Void Function(ffi.Int64)>(isLeaf: true)
external void dart_edge_s3_client_dispose(int handle);

@ffi.Native<ffi.Void Function(ffi.Pointer<NativeS3BytesResult>)>(isLeaf: true)
external void dart_edge_s3_client_free_bytes_result(
  ffi.Pointer<NativeS3BytesResult> value,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>(isLeaf: true)
external void dart_edge_s3_client_free_string(ffi.Pointer<ffi.Char> value);

@ffi.Native<
  ffi.Pointer<NativeS3BytesResult> Function(ffi.Int64, ffi.Pointer<ffi.Char>)
>()
external ffi.Pointer<NativeS3BytesResult> dart_edge_s3_client_get_object_bytes(
  int handle,
  ffi.Pointer<ffi.Char> request_json,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Int64, ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<ffi.Char> dart_edge_s3_client_head_object(
  int handle,
  ffi.Pointer<ffi.Char> request_json,
);

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int dart_edge_s3_client_native_abi_version();

@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Int64,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Uint8>,
    ffi.IntPtr,
  )
>()
external ffi.Pointer<ffi.Char> dart_edge_s3_client_put_object_bytes(
  int handle,
  ffi.Pointer<ffi.Char> request_json,
  ffi.Pointer<ffi.Uint8> bytes_ptr,
  int bytes_len,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> dart_edge_s3_client_take_last_error();

final class NativeS3BytesResult extends ffi.Struct {
  external imp$1.NativeOwnedBytes bytes;

  external ffi.Pointer<ffi.Char> result_json;
}
